--- a/experiments/configs/dynamics/mosvgpe/gating_network/inducing_variable/ones.yaml
+++ b/experiments/configs/dynamics/mosvgpe/gating_network/inducing_variable/ones.yaml
@@ -1,6 +1,4 @@
 _target_: mosvgpe.keras.inducing_variables.InducingPointsSerializable
 Z:
   _target_: numpy.ones
-  shape:
-    - 90
-    - ${env.input_dim}
+  shape: [90, 4]
