updated description and keywords

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,9 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "ModeRL"
 version = "0.1.0"
-description = "Mode remaining exploration for model-based-reinforcement learning in TensorFlow/GPflow."
+description = "Mode constrained model-based-reinforcement learning in TensorFlow/GPflow."
 license = {text = "Apache-2.0"}
-keywords = ["model-based reinforcement learning","mixtures-of-gaussian-process-experts", "gaussian-processes", "machine-learning", "variational-inference"]
+keywords = ["model-based reinforcement learning","mixtures-of-gaussian-process-experts", "gaussian-processes", "machine-learning", "variational-inference", "Bayesian inference", "planning"]
 readme = "README.md"
 requires-python = ">=3.7"
 dependencies = [
