--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,10 +44,10 @@ classifiers = [
 ]
 
 [project.optional-dependencies]
-dev = ["black[jupyter]", "pyright", "isort", "pyflakes", "pytest"]
+dev = ["black[jupyter]", "pre-commit", "pyright", "isort", "pyflakes", "pytest"]
 # examples = ["pandas", "jupyter", "hydra-core", "simenvs @ git+https://github.com/aidanscannell/simenvs.git@v0.2.0#egg=simenvs"]
 examples = ["pandas", "jupyter", "hydra-core", "palettable"]
-experiments = ["pandas", "jupyter", "hydra-core", "palettable", "tikzplotlib"]
+experiments = ["pandas", "hydra-core", "palettable", "tikzplotlib"]
 
 [tool.setuptools]
 packages = ["moderl", "examples", "experiments"]
