moved objective configs to separate experiments

--- a/experiments/configs/controller/main.yaml
+++ b/experiments/configs/controller/main.yaml
@@ -2,12 +2,16 @@ defaults:
   - reward_fn: state_diff_control
 
 _target_: moderl.controllers.ExplorativeController
+explorative_objective_fn:
+  _target_: moderl.objectives.build_joint_gating_function_entropy
+  dynamics: ${dynamics}
+  start_state: ${start_state}
 start_state: ${start_state}
 control_dim: 2
 horizon: 15
 max_iterations: 200
 mode_satisfaction_prob: 0.8
-exploration_weight: 1.0
+exploration_weight: 10.0
 keep_last_solution: true
 control_lower_bound: null
 control_upper_bound: null
