--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ dependencies = [
     # NOTE: Support of Apple Silicon MacOS platforms is in an experimental mode
     "tensorflow-macos>=2.4.0; platform_system=='Darwin' and platform_machine=='arm64'",
     # "matplotlib",
-    "tensor_annotations<=1.0.2",
+    "tensor_annotations==1.0.2",
     # "mosvgpe @ git+https://github.com/aidanscannell/mosvgpe#egg=mosvgpe",
     # TODO make this agnostic of my file path...
     "mosvgpe @ file:///Users/scannea1/python-projects/ModeRL/subtrees/mosvgpe",
