--- a/experiments/configs/controller/main.yaml
+++ b/experiments/configs/controller/main.yaml
@@ -11,7 +11,8 @@ control_dim: 2
 horizon: 15
 max_iterations: 200
 mode_satisfaction_prob: 0.8
-exploration_weight: 10.0
+exploration_weight: 1.0
+# exploration_weight: 10.0
 keep_last_solution: true
 control_lower_bound: null
 control_upper_bound: null
