--- a/experiments/configs/main.yaml
+++ b/experiments/configs/main.yaml
@@ -28,7 +28,7 @@ wandb:
   log_extrinsic_return: True
   exploration: "joint-gating"
   name: "default"
-  run_name: "${wandb.name}/${controller.mode_satisfaction_prob}"
+  run_name: "${wandb.name}/Pr=${controller.mode_satisfaction_prob}/beta=${controller.exporation_weight}"
   tags:
     - ${wandb.name}
     - "exploration=${wandb.exploration}"
