--- a/experiments/configs/main.yaml
+++ b/experiments/configs/main.yaml
@@ -27,10 +27,8 @@ wandb:
   log_constraint_violations: True
   log_extrinsic_return: True
   exploration: "joint-gating"
-  name: "default"
-  run_name: "${wandb.name}/Pr=${controller.mode_satisfaction_prob}/beta=${controller.exporation_weight}"
+  run_name: "${wandb.exploration}/Pr=${controller.mode_satisfaction_prob}/beta=${controller.exploration_weight}"
   tags:
-    - ${wandb.name}
     - "exploration=${wandb.exploration}"
     - ${env.env_name}
     - "mode_prob=${controller.mode_satisfaction_prob}"
