made exploration weight 100

--- a/experiments/configs/experiment/independent_gating_function_entropy.yaml
+++ b/experiments/configs/experiment/independent_gating_function_entropy.yaml
@@ -7,3 +7,4 @@ controller:
     _target_: moderl.objectives.build_independent_gating_function_entropy
     dynamics: ${dynamics}
     start_state: ${start_state}
+  exploration_weight: 100.0
