--- a/experiments/configs/controller/main.yaml
+++ b/experiments/configs/controller/main.yaml
@@ -1,5 +1,6 @@
 defaults:
-  - reward_fn: state_diff_control
+  - reward_fn: state_diff_control_low
+  # - reward_fn: state_diff_control
 
 _target_: moderl.controllers.ExplorativeController
 explorative_objective_fn:
