--- a/experiments/configs/hydra/launcher/slurm.yaml
+++ b/experiments/configs/hydra/launcher/slurm.yaml
@@ -16,7 +16,7 @@ timeout_min: 360
 cpus_per_task: 6
 gpus_per_node: 0
 tasks_per_node: 2
-mem_gb: 8
+# mem_gb: 8
 nodes: 1
 name: ${hydra.job.name}
 comment: null
@@ -24,7 +24,7 @@ comment: null
 exclude: null
 cpus_per_gpu: null
 gpus_per_task: null
-mem_per_gpu: null
+# mem_per_gpu: null
 mem_per_cpu: 1000
 # mem_per_cpu: null
 signal_delay_s: 600
