--- a/experiments/configs/experiment/sweep_delta_beta_seed.yaml
+++ b/experiments/configs/experiment/sweep_delta_beta_seed.yaml
@@ -2,11 +2,9 @@
 hydra:
   sweeper:
     params:
-      controller:
-        mode_satisfaction_prob: 0.6,0.7,0.8,0.9
-        exploration_weight: 10.0,20.0
-      training:
-        random_seed: 1,42
+      controller.mode_satisfaction_prob: 0.6,0.7,0.8,0.9
+      controller.exploration_weight: 10.0,20.0
+      training.random_seed: 1,42
 
 controller:
   reward_fn:
