--- a/experiments/configs/experiment/sweep_delta_beta_seed.yaml
+++ b/experiments/configs/experiment/sweep_delta_beta_seed.yaml
@@ -10,10 +10,10 @@ controller:
   reward_fn:
     _target_: moderl.reward_functions.Additive
     first_part:
-      _target_: moderl.reward_functions.StateDiffRewardFunction
+      _target_: moderl.reward_functions.TargetStateRewardFunction
       weight_matrix:
         _target_: tensorflow.constant
-        value: [[2.0, 0.0], [0.0, 2.0]]
+        value: [[100.0, 0.0], [0.0, 100.0]]
         dtype: "float64"
       target_state: ${target_state}
     second_part:
@@ -22,6 +22,21 @@ controller:
         _target_: tensorflow.constant
         value: [[1.0, 0.0], [0.0, 1.0]]
         dtype: "float64"
+
+    # _target_: moderl.reward_functions.Additive
+    # first_part:
+    #   _target_: moderl.reward_functions.StateDiffRewardFunction
+    #   weight_matrix:
+    #     _target_: tensorflow.constant
+    #     value: [[2.0, 0.0], [0.0, 2.0]]
+    #     dtype: "float64"
+    #   target_state: ${target_state}
+    # second_part:
+    #   _target_: moderl.reward_functions.ControlQuadraticRewardFunction
+    #   weight_matrix:
+    #     _target_: tensorflow.constant
+    #     value: [[1.0, 0.0], [0.0, 1.0]]
+    #     dtype: "float64"
 
 exploration_weight_schedule:
   decay_rate: 0.96
