--- a/experiments/configs/experiment/sweep_delta_beta_seed.yaml
+++ b/experiments/configs/experiment/sweep_delta_beta_seed.yaml
@@ -4,39 +4,34 @@ hydra:
     params:
       controller.mode_satisfaction_prob: 0.6,0.7,0.8,0.9
       controller.exploration_weight: 10.0,20.0
-      training.random_seed: 1,42
+      training.random_seed: 1
+      # training.random_seed: 1,42
 
 controller:
   reward_fn:
     _target_: moderl.reward_functions.Additive
     first_part:
-      _target_: moderl.reward_functions.TargetStateRewardFunction
-      weight_matrix:
-        _target_: tensorflow.constant
-        value: [[100.0, 0.0], [0.0, 100.0]]
-        dtype: "float64"
-      target_state: ${target_state}
+      _target_: moderl.reward_functions.Additive
+      first_part:
+        _target_: moderl.reward_functions.TargetStateRewardFunction
+        weight_matrix:
+          _target_: tensorflow.constant
+          value: [[150.0, 0.0], [0.0, 150.0]]
+          dtype: "float64"
+        target_state: ${target_state}
+      second_part:
+        _target_: moderl.reward_functions.ControlQuadraticRewardFunction
+        weight_matrix:
+          _target_: tensorflow.constant
+          value: [[1.0, 0.0], [0.0, 1.0]]
+          dtype: "float64"
     second_part:
-      _target_: moderl.reward_functions.ControlQuadraticRewardFunction
+      _target_: moderl.reward_functions.StateDiffRewardFunction
       weight_matrix:
         _target_: tensorflow.constant
         value: [[1.0, 0.0], [0.0, 1.0]]
         dtype: "float64"
-
-    # _target_: moderl.reward_functions.Additive
-    # first_part:
-    #   _target_: moderl.reward_functions.StateDiffRewardFunction
-    #   weight_matrix:
-    #     _target_: tensorflow.constant
-    #     value: [[2.0, 0.0], [0.0, 2.0]]
-    #     dtype: "float64"
-    #   target_state: ${target_state}
-    # second_part:
-    #   _target_: moderl.reward_functions.ControlQuadraticRewardFunction
-    #   weight_matrix:
-    #     _target_: tensorflow.constant
-    #     value: [[1.0, 0.0], [0.0, 1.0]]
-    #     dtype: "float64"
+      target_state: ${target_state}
 
 exploration_weight_schedule:
   decay_rate: 0.96
