added names and neatened

--- a/experiments/configs/experiment/greedy_with_constraint.yaml
+++ b/experiments/configs/experiment/greedy_with_constraint.yaml
@@ -1,6 +1,7 @@
 # @package _global_
 wandb:
   exploration: "greedy"
+  name: "greedy_with_constraint"
 
 controller:
   explorative_objective_fn: null
