--- a/experiments/configs/experiment/aleatoric_unc_ablation.yaml
+++ b/experiments/configs/experiment/aleatoric_unc_ablation.yaml
@@ -1,7 +1,7 @@
 # @package _global_
 wandb:
   exploration: "bernoulli"
-  name: "bernoulli"
+  name: "aleatoric_unc_ablation"
 
 controller:
   explorative_objective_fn:
