--- a/experiments/configs/experiment/greedy_no_constraint.yaml
+++ b/experiments/configs/experiment/greedy_no_constraint.yaml
@@ -1,7 +1,11 @@
 # @package _global_
 wandb:
   exploration: "greedy"
+  name: "greedy_no_constraint"
 
 controller:
   explorative_objective_fn: null
   mode_satisfaction_prob: 0.0
+
+training:
+  num_episodes: 20
