--- a/experiments/configs/experiment/myopic_ablation.yaml
+++ b/experiments/configs/experiment/myopic_ablation.yaml
@@ -1,6 +1,7 @@
 # @package _global_
 wandb:
   exploration: "independent_gating"
+  name: "myopic_ablation"
 
 controller:
   explorative_objective_fn:
