--- a/experiments/configs/experiment/compare_constraint_levels.yaml
+++ b/experiments/configs/experiment/compare_constraint_levels.yaml
@@ -4,7 +4,7 @@ hydra:
     params:
       controller.mode_satisfaction_prob: 0.5,0.6,0.7,0.8,0.9
       controller.exploration_weight: 10.0,20.0
-      # training.random_seed: 1,42
+      training.random_seed: 1,42,69,50,100
 
 wandb:
   name: "constraint_level_comparison"
