--- a/subtrees/simenvs/simenvs/velocity_controlled_point_mass/scenario-1/env_config.toml
+++ b/subtrees/simenvs/simenvs/velocity_controlled_point_mass/scenario-1/env_config.toml
@@ -3,7 +3,7 @@ gating_bitmap = "./bitmaps/gating_mask.bmp"  # filename for gating bitmap
 # gating_bitmap = "../scenario-1/gating_mask.bmp"  # filename for gating bitmap
 
 # lists are converted to 1D np.arrays and floats/ints are broadcast
-# e.g min_state = [-3.0, -2.0] is converted with np.array(min_state) 
+# e.g min_state = [-3.0, -2.0] is converted with np.array(min_state)
 # state constraints
 min_state = [-3.0, -3.0]
 max_state = [3.0, 3.0]
@@ -11,8 +11,10 @@ max_state = [3.0, 3.0]
 # control constraints
 # min_velocity = [-0.05, -0.05]
 # max_velocity = [0.05, 0.05]
-min_velocity = [-5.0, -5.0]
-max_velocity = [5.0, 5.0]
+# min_velocity = [-5.0, -5.0]
+# max_velocity = [5.0, 5.0]
+min_velocity = [-3.0, -3.0]
+max_velocity = [3.0, 3.0]
 min_acceleration = [-10.0, -10.0]
 max_acceleration = [10.0, 10.0]
 
