--- a/experiments/configs/experiment/compare_constraint_levels.yaml
+++ b/experiments/configs/experiment/compare_constraint_levels.yaml
@@ -3,9 +3,8 @@ hydra:
   sweeper:
     params:
       controller.mode_satisfaction_prob: 0.5,0.6,0.7,0.8,0.9
+      # training.random_seed: 1,42,69,50,100
       # controller.exploration_weight: 10.0,20.0
-      training.random_seed: 1,42,69,50,100
-
 # controller:
 #   exploration_weight: 10.0
 
