--- a/requirements.txt
+++ b/requirements.txt
@@ -47,6 +47,7 @@ gym==0.23.0
 gym-notices==0.0.8
 h5py==3.7.0
 hydra-core==1.2.0
+hydra-submitit-launcher==1.2.0
 identify==2.5.6
 idna==3.4
 imageio==2.22.1
@@ -76,10 +77,9 @@ lark==1.1.2
 libclang==14.0.6
 Markdown==3.4.1
 MarkupSafe==2.1.1
-matplotlib==3.6.1
+matplotlib==3.7.0
 matplotlib-inline==0.1.6
 mistune==2.0.4
--e git+https://github.com/aidanscannell/ModeRL.git@355d0f234aed8e83f2632612ece327d9c650e676#egg=ModeRL
 mosvgpe @ file:///Users/scannea1/python-projects/ModeRL/subtrees/mosvgpe
 multipledispatch==0.6.0
 mypy-extensions==0.4.3
@@ -135,6 +135,7 @@ requests==2.28.1
 requests-oauthlib==1.3.1
 rsa==4.9
 scipy==1.9.2
+seaborn==0.12.2
 Send2Trash==1.8.0
 sentry-sdk==1.9.10
 setproctitle==1.3.2
@@ -144,6 +145,7 @@ six==1.16.0
 smmap==5.0.0
 soupsieve==2.3.2.post1
 stack-data==0.5.1
+submitit==1.4.5
 tabulate==0.9.0
 tensor-annotations==1.0.2
 tensorboard==2.10.1
