corrected paper to poster

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,6 @@
 paper/aistats2023.sty -linguist-detectable
 paper/fancyhdr.sty -linguist-detectable
-paper/beamercolorthemeaalto.sty -linguist-detectable
-paper/beamerthemeaalto.sty -linguist-detectable
+paper/main.tex -linguist-detectable
+poster/beamercolorthemeaalto.sty -linguist-detectable
+poster/beamerthemeaalto.sty -linguist-detectable
+poster/main.tex -linguist-detectable
