--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,6 @@
-paper/aistats2023.sty -linguist-detectable
-paper/fancyhdr.sty -linguist-detectable
-paper/main.tex -linguist-detectable
-poster/beamercolorthemeaalto.sty -linguist-detectable
-poster/beamerthemeaalto.sty -linguist-detectable
-poster/main.tex -linguist-detectable
+paper/aistats2023.sty linguist-vendored
+paper/fancyhdr.sty linguist-vendored
+paper/main.tex linguist-vendored
+poster/beamercolorthemeaalto.sty linguist-vendored
+poster/beamerthemeaalto.sty linguist-vendored
+poster/main.tex linguist-vendored
